<?xml version="1.0"?>
<package format="2">
  <name>hironx_rpc_msgs</name>
  <version>0.0.2</version>
  <description>ROS topic/service/action files are defined in this package for
  Hironx RPC (Remote Procedure Call).
  </description>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I.Y. Saito</author>
  <license>Apache License 2.0</license>
  <url type="website">http://wiki.ros.org/hironx_rpc_msgs</url>
  <url type="repository">https://github.com/start-jsk/rtmros_hironx</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_hironx/issues</url>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>  
  <build_export_depend>message_runtime</build_export_depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <export />
</package>
