<?xml version="1.0"?>
<package format="2">
  <name>hironx_rpc_server</name>
  <version>0.0.4</version>
  <description>This package provides RPC (Remote Procedure Call) server
  feature for higher level of robot operations for the Hironx-variant robots
  (i.e. Hironx, NEXTAGE Open).
  </description>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I.Y. Saito</author>
  <license>Apache License 2.0</license>
  <url type="website">http://wiki.ros.org/hironx_rpc</url>
  <url type="repository">https://github.com/start-jsk/rtmros_hironx</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_hironx/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>hironx_ros_bridge</exec_depend>
  <exec_depend>hironx_rpc_msgs</exec_depend>
  <exec_depend>hrpsys</exec_depend>
  <exec_depend>hrpsys_ros_bridge</exec_depend>
  <exec_depend>tork_rpc_util</exec_depend>
  <test_depend>rostest</test_depend>
  <doc_depend>rosdoc_lite</doc_depend>doc_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />>
  </export>export>
</package>
